Z-index fixed to the navbar

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ nav.fixed {
 	padding: 15px 0;
 	background: rgba(0,0,0,0.85);
 	border-bottom: 4px solid #000;
+	z-index: 999;
 }
 nav.fixed ul li {
 	line-height: 50px;
